# learning-with-texts

./: .gitignore  Cargo.toml  MIGRATING_FROM_LEGACY_PHP.md  PAKE_MIGRATION_PLAN.md  README.md  backup_restore.php  export_desktop_backup.php  package-lock.json  package.json  pake.json  tauri.conf.json  vite.config.ts  vitest.config.ts
capabilities/: default.json
desktop/: .gitignore  E2E.md  MVP_PARITY.md  README.md  RELEASING.md  SCHEMA_MIGRATIONS.md  SETTINGS_PARITY.md  SIGNING.md  USER_ACCEPTANCE.md  pake.json  tsconfig.json  vite.config.ts  vitest.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/migrations/: 0004_term_details.sql  0005_expressions.sql  0006_reviews.sql  0007_tags.sql  0009_text_audio.sql
desktop/src-tauri/src/: database.rs  lib.rs  main.rs  parser.rs
docs/: ARCHITECTURE.md  E2E.md  QA_EXECUTION_REPORT.md  QA_TEST_SCENARIOS.md  RELEASING.md  SIGNING.md  USER_ACCEPTANCE.md  UX_AUDIT.md
e2e/: app.test.mjs  qa.test.mjs
icons/: icon.icns
migrations/: 0001_initial.sql  0002_text_parsing.sql  0003_terms.sql  0008_archived_texts.sql  0010_app_settings.sql  0011_lesson_completion.sql
scripts/: create-release-config.mjs  create-release-config.test.mjs  generate-updater-key.sh  generate-updater-key.test.mjs  package-arch.mjs  package.mjs  runtime-boundary.test.mjs  tauri-config.test.mjs  validate-release-assets.test.mjs  validate-release-version.mjs  validate-release-version.test.mjs
src/: commands.rs  database.rs  lib.rs  models.rs  (+1 more)
(+54 files in other folders)
