[package]
name = "lwt-desktop"
version = "0.1.0"
description = "Local-first desktop runtime for Learning with Texts"
edition = "2021"

[lib]
name = "lwt_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.5", features = [] }
